FB Login wit openFB

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Login">
   <ion-content>
     <div class="card">
-      <button class="button button-block button-positive">
+      <button class="button button-block button-positive" ng-click="fbLogin()">
         Login with Facebook
       </button>
     </div>
