--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,1 +1,16 @@
 /* Empty. Add your own CSS if you like */
+.gray{
+  background-color: gray;
+}
+.blue{
+  background-color: blue;
+}
+.red{
+  background-color: red;
+}
+.cyan{
+  background-color: cyan;
+}
+.green{
+  background-color: green;
+}
