--- a/www/templates/test.html
+++ b/www/templates/test.html
@@ -1,5 +1,16 @@
 <ion-view view-title="Test">
   <ion-content>
+    <button class="button button-full button-royal" ng-click="wheel()">
+      Full Width Block Button
+    </button>
+    <div class="row">
+      <div class="col col-50 blue" ng-class="{green: is_category1}">categoria 1</div>
+      <div class="col col-50 gray" ng-class="{green: is_category2}">categoria 2</div>
+    </div>
+    <div class="row">
+      <div class="col col-50 cyan" ng-class="{green: is_category3}">categoria 3</div>
+      <div class="col col-50 red" ng-class="{green: is_category4}">categoria 4</div>
+    </div>
     <div class="card" ng-repeat="question in questions">
       <span >{{question.question}}</span>
       <ion-list>
