trivia by category

--- a/www/templates/trivia.html
+++ b/www/templates/trivia.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Test">
+<ion-view view-title="Trivia {{category}}">
   <ion-content>
     <span >Tienes {{lives}} vidas.</span>
     <span >Llevas {{points}} puntos.</span>
