--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Test">
+<ion-view view-title="Home">
   <ion-content>
     <div class="row">
       <div class="col col-50 blue" ng-class="{green: is_category1}">categoria 1</div>
