--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,9 +1,15 @@
-<ion-view view-title="Login">
-  <ion-content>
-    <div class="card">
-      <button class="button button-block button-positive" ng-click="fbLogin()">
-        Login with Facebook
-      </button>
-    </div>
+<ion-view view-title="Iniciar Sesión" name="login-view">
+  <ion-content class="padding">
+      <div class="list list-inset">
+          <label class="item item-input">
+              <input type="text" placeholder="Correo electrónico" ng-model="data.username">
+          </label>
+          <label class="item item-input">
+              <input type="password" placeholder="Contraseña" ng-model="data.password">
+          </label>
+      </div>
+      <button class="button button-block button-positive" ng-click="login()">Ingresar</button>
+
+      <button class="button button-block button-calm" ng-click="login()">Ingresar con Facebook</button>
   </ion-content>
 </ion-view>
