--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,12 +1,19 @@
 <ion-view view-title="Home">
   <ion-content>
     <div class="row">
-      <div class="col col-50 blue" ng-class="{green: is_category1}">categoria 1</div>
-      <div class="col col-50 gray" ng-class="{green: is_category2}">categoria 2</div>
+      <div class="col col-50 blue titulosN" ng-class="{green: is_category1}">Cultura Guatemalteca</div>
     </div>
     <div class="row">
-      <div class="col col-50 cyan" ng-class="{green: is_category3}">categoria 3</div>
-      <div class="col col-50 red" ng-class="{green: is_category4}">categoria 4</div>
+      <div class="col col-50 gray titulosN" ng-class="{green: is_category2}">Pobreza y Desigualdad</div>
+    </div>
+    <div class="row">
+      <div class="col col-50 yellow titulosN" ng-class="{green: is_category3}">Historia Guatemalteca</div>
+    </div>
+    <div class="row">
+      <div class="col col-50 cyan titulosN" ng-class="{green: is_category4}">Personajes Guatemaltecos</div>
+    </div>
+    <div class="row">
+      <div class="col col-50 red titulosN" ng-class="{green: is_category5}">Ciudadanía</div>
     </div>
     <button class="button button-full button-royal" ng-click="wheel()">
       {{txt_wheel_btn}}
