Estilo para la ruleta

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,21 +1,32 @@
 <ion-view view-title="Home">
   <ion-content>
-    <div class="row">
-      <div class="col col-50 blue titulosN" ng-class="{green: is_category1}">Cultura Guatemalteca</div>
+    <br/>
+    <div class="rowcategoria">
+      <center>
+        <div class="col col-50 auxp aux1 titulosN" ng-class="{aux6: is_category1}">Cultura<br/> Guatemalteca</div>
+      </center>
     </div>
-    <div class="row">
-      <div class="col col-50 gray titulosN" ng-class="{green: is_category2}">Pobreza y Desigualdad</div>
+    <div class="rowcategoria">
+      <center>
+        <div class="col col-50 auxp aux2 titulosN" ng-class="{aux6: is_category2}">Pobreza<br/> y Desigualdad</div>
+      </center>
     </div>
-    <div class="row">
-      <div class="col col-50 yellow titulosN" ng-class="{green: is_category3}">Historia Guatemalteca</div>
+    <div class="rowcategoria">
+      <center>
+        <div class="col col-50 auxp aux3 titulosN" ng-class="{aux6: is_category3}">Historia<br/> Guatemalteca</div>
+      </center>
     </div>
-    <div class="row">
-      <div class="col col-50 cyan titulosN" ng-class="{green: is_category4}">Personajes Guatemaltecos</div>
+    <div class="rowcategoria">
+      <center>
+        <div class="col col-50 auxp aux4 titulosN" ng-class="{aux6: is_category4}">Personajes Guatemaltecos</div>
+      </center>
     </div>
-    <div class="row">
-      <div class="col col-50 red titulosN" ng-class="{green: is_category5}">Ciudadanía</div>
+    <div class="rowcategoria">
+      <center>
+        <div class="col col-50 auxp aux5 titulosN" ng-class="{aux6: is_category5}"><div class="divparacentrar">&nbsp;</div>Ciudadanía</div>
+      </center>
     </div>
-    <button class="button button-full button-royal" ng-click="wheel()">
+    <button class="button button-full button-positive" ng-click="wheel()">
       {{txt_wheel_btn}}
     </button>
   </ion-content>
