--- a/www/css/style.css
+++ b/www/css/style.css
@@ -59,19 +59,49 @@
 }
 
 /*Finaliza estilo de la ruleta*/
+.divparacentrar{
+  height: 10px !important;
+}
+.auxp{
+  height: 55px;
+  width: 220px !important;
+  text-align: center;
+  vertical-align: middle;
+  max-width: 80% !important;
+  border-radius: 10px;
+  border: 1px solid #575756;
+  
+}
 
-.gray{
-  background-color: gray;
+.aux1{
+  background-color: #DD4395;
+  color: #FFFFFF;
 }
-.blue{
-  background-color: blue;
+.aux2{
+  background-color: #DA9636;
+  color: #FFFFFF;
 }
-.red{
-  background-color: red;
+.aux3{
+  background-color: #ED7A0D;
+  color: #FFFFFF;
 }
-.cyan{
-  background-color: cyan;
+.aux4{
+  background-color: #DA4A28;
+  color: #FFFFFF;
 }
-.green{
-  background-color: green;
+.aux5{
+  background-color: #CAE2CA;
+  color: #575756;
+
+}
+.aux6{
+  background-color: #009EE0;
+  color: #FFFFFF;
+  box-shadow: 0px 0px 30px 5px rgba(87, 87, 86, .75);
+}
+
+.rowcategoria{
+  margin-bottom: 10px;
+  margin-top: 10px;
+
 }
