Trivia fixed and Top created. Controllers logic separated

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -18,6 +18,7 @@
 		<ion-content>
 			<ion-list>
 				<ion-item nav-clear menu-close ui-sref="app.home">Home</ion-item>
+				<ion-item nav-clear menu-close ui-sref="app.toptrivia">Top Trivia</ion-item>
 				<ion-item nav-clear menu-close ui-sref="app.login" ng-hide="isLoggedIn">Login</ion-item>
 				<ion-item nav-clear menu-close ui-sref="app.register" ng-hide="isLoggedIn">Register</ion-item>
 				<ion-item nav-clear menu-close ng-click="logout()" ng-show="isLoggedIn">Logout</ion-item>
