--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,5 +1,10 @@
 <ion-view view-title="Home">
   <ion-content>
+    <a class="item item-icon-left" href="#">
+      <i class="icon ion-person-stalker"></i>
+        Tu puntuación máxima es
+      <span class="badge badge-assertive">{{max_total}}</span>
+    </a>
     <br/>
     <div class="rowcategoria">
       <center>
