--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Home">
+<ion-view cache-view="false" view-title="Home">
   <ion-content>
     <a class="item item-icon-left" href="#">
       <i class="icon ion-person-stalker"></i>
