--- a/www/templates/login2.html
+++ b/www/templates/login2.html
@@ -1,8 +1,11 @@
-<ion-view view-title="Login">
+<ion-view view-title="Inicio de Sesión">
   <ion-content>
     <div class="card">
+      <center>
+        <img src="img/logo.jpg" />
+      </center>
       <button class="button button-block button-positive" ng-click="fbLogin()">
-        Login with Facebook
+        Entrar con Facebook
       </button>
     </div>
   </ion-content>
