--- a/www/templates/trivia.html
+++ b/www/templates/trivia.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Trivia {{category}}">
+<ion-view view-title="Trivia - {{categoryName}}">
   <ion-content>
     <span >Tienes {{lives}} vidas.</span>
     </br>
