--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -17,9 +17,9 @@
 		</ion-header-bar>
 		<ion-content>
 			<ion-list>
-				<ion-item nav-clear menu-close ui-sref="app.home">Home</ion-item>
+				<ion-item nav-clear menu-close ui-sref="app.home">Inicio</ion-item>
 				<ion-item nav-clear menu-close ui-sref="app.toptrivia">Top Trivia</ion-item>
-				<ion-item nav-clear menu-close ui-sref="app.login" ng-hide="isLoggedIn">Login</ion-item>
+				<ion-item nav-clear menu-close ui-sref="app.login" ng-hide="isLoggedIn">Cerrar Sesión</ion-item>
 				<ion-item nav-clear menu-close ui-sref="app.register" ng-hide="isLoggedIn">Register</ion-item>
 				<ion-item nav-clear menu-close ng-click="logout()" ng-show="isLoggedIn">Logout</ion-item>
 			</ion-list>
